--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Global Rates</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Global Commodity Dashboard</title>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
 body {
@@ -21,91 +23,152 @@ body {
   border:1px solid #1f2937;
   padding:20px;
   border-radius:16px;
-  width:360px;
+  width:420px;
   box-shadow:0 10px 30px rgba(0,0,0,0.4);
 }
 
-h2 {
-  text-align:center;
-  margin-bottom:16px;
-}
+h2 { text-align:center; }
 
 .item {
   display:flex;
   justify-content:space-between;
-  margin:14px 0;
-  font-size:16px;
+  margin:8px 0;
 }
 
-.green { color:#22c55e; font-weight:bold }
-.yellow { color:#facc15; font-weight:bold }
-.blue { color:#38bdf8; font-weight:bold }
+.green{color:#22c55e;font-weight:bold}
+.yellow{color:#facc15;font-weight:bold}
+.blue{color:#38bdf8;font-weight:bold}
+.gray{color:#94a3b8}
 
-.footer {
-  margin-top:15px;
-  font-size:12px;
-  color:#94a3b8;
-  text-align:center;
+input,button{
+  background:#020617;
+  border:1px solid #1f2937;
+  color:#fff;
+  padding:6px;
+  border-radius:8px;
 }
+button{cursor:pointer}
+
+canvas{margin-top:10px}
+
 </style>
 </head>
 <body>
 
 <div class="card">
-  <h2>🌍 Global Rates</h2>
+  <h2>🌍 Global Rates Dashboard</h2>
+
+  <div class="item"><span>💵 USD → INR</span><span id="usdInr" class="green">Loading...</span></div>
+  <div class="item"><span>🟨 Gold (oz)</span><span id="goldUsd" class="yellow">Loading...</span></div>
+  <div class="item"><span>🇮🇳 Gold ₹/gram</span><span id="goldInr" class="blue">Loading...</span></div>
+  <div class="item"><span>🪙 Silver (oz)</span><span id="silverUsd" class="gray">Loading...</span></div>
+  <div class="item"><span>🟫 Copper (kg ₹)</span><span id="copperInr" class="gray">Loading...</span></div>
+
+  <hr style="border-color:#1f2937;margin:10px 0">
 
   <div class="item">
-    <span>💵 USD → INR</span>
-    <span id="usdInr" class="green">Loading...</span>
+    <input id="alertPrice" placeholder="Gold alert ₹/gram" type="number">
+    <button onclick="setAlert()">🔔 Set Alert</button>
   </div>
+  <div id="alertStatus" class="gray" style="font-size:12px"></div>
 
-  <div class="item">
-    <span>🟨 Gold (per ounce)</span>
-    <span id="goldUsd" class="yellow">Loading...</span>
-  </div>
+  <canvas id="goldChart"></canvas>
+  <canvas id="fxChart"></canvas>
 
-  <div class="item">
-    <span>🇮🇳 Gold (₹ per gram)</span>
-    <span id="goldInr" class="blue">Loading...</span>
-  </div>
-
-  <div class="footer">
+  <div class="gray" style="text-align:center;font-size:12px;margin-top:10px">
     Auto refresh every 60 seconds
   </div>
 </div>
 
 <script>
-async function loadRates() {
-  try {
-    // USD to INR (CORS-safe)
+let goldHistory=[], fxHistory=[];
+let alertTarget=null;
+
+async function loadRates(){
+  try{
+    // USD INR
     const fx = await fetch("https://open.er-api.com/v6/latest/USD");
     const fxData = await fx.json();
     const usdInr = fxData.rates.INR;
 
-    // Gold price USD per ounce (CORS-safe public endpoint)
+    // Gold
     const gold = await fetch("https://api.gold-api.com/price/XAU");
     const goldData = await gold.json();
-    const goldPerOunceUsd = goldData.price;
+    const goldUsd = goldData.price;
 
-    // Convert to INR per gram
-    const goldPerGramInr = (goldPerOunceUsd * usdInr) / 31.1035;
+    // Silver
+    const silver = await fetch("https://api.gold-api.com/price/XAG");
+    const silverData = await silver.json();
+    const silverUsd = silverData.price;
 
-    document.getElementById("usdInr").textContent = `₹ ${usdInr.toFixed(2)}`;
-    document.getElementById("goldUsd").textContent = `$ ${goldPerOunceUsd.toFixed(2)}`;
-    document.getElementById("goldInr").textContent = `₹ ${goldPerGramInr.toFixed(2)}`;
+    // Copper (USD per pound → convert to INR/kg)
+    const copper = await fetch("https://api.metals.live/v1/spot/copper");
+    const copperData = await copper.json();
+    const copperUsdLb = copperData[0].price;
+    const copperInrKg = copperUsdLb * usdInr * 2.20462;
 
-  } catch (e) {
-    document.querySelector(".card").innerHTML = `
-      <h2>⚠️ Error</h2>
-      <p style="text-align:center;color:#f87171">
-        Unable to load live data.<br>
-        Check internet or try later.
-      </p>`;
+    const goldInrGram = (goldUsd * usdInr) / 31.1035;
+
+    usdInrEl.textContent = `₹ ${usdInr.toFixed(2)}`;
+    goldUsdEl.textContent = `$ ${goldUsd.toFixed(2)}`;
+    goldInrEl.textContent = `₹ ${goldInrGram.toFixed(2)}`;
+    silverUsdEl.textContent = `$ ${silverUsd.toFixed(2)}`;
+    copperInrEl.textContent = `₹ ${copperInrKg.toFixed(2)}`;
+
+    goldHistory.push(goldInrGram);
+    fxHistory.push(usdInr);
+
+    if(goldHistory.length>20){goldHistory.shift();fxHistory.shift();}
+
+    updateCharts();
+
+    if(alertTarget && goldInrGram>=alertTarget){
+      alert("🔔 Gold Alert hit: ₹"+goldInrGram.toFixed(2));
+      alertTarget=null;
+      alertStatus.textContent="Alert triggered.";
+    }
+
+  }catch{
+    document.body.innerHTML="<h2 style='color:red'>API Error. Try again later.</h2>";
   }
 }
 
+function setAlert(){
+  alertTarget=parseFloat(alertPrice.value);
+  alertStatus.textContent="Alert set at ₹"+alertTarget;
+}
+
+let goldChart=new Chart(document.getElementById("goldChart"),{
+  type:"line",
+  data:{labels:[],datasets:[{label:"Gold ₹/g",data:[],borderWidth:2}]},
+  options:{responsive:true}
+});
+
+let fxChart=new Chart(document.getElementById("fxChart"),{
+  type:"line",
+  data:{labels:[],datasets:[{label:"USD/INR",data:[],borderWidth:2}]},
+  options:{responsive:true}
+});
+
+function updateCharts(){
+  goldChart.data.labels=goldHistory.map((_,i)=>i+1);
+  goldChart.data.datasets[0].data=goldHistory;
+  goldChart.update();
+
+  fxChart.data.labels=fxHistory.map((_,i)=>i+1);
+  fxChart.data.datasets[0].data=fxHistory;
+  fxChart.update();
+}
+
+const usdInrEl=document.getElementById("usdInr");
+const goldUsdEl=document.getElementById("goldUsd");
+const goldInrEl=document.getElementById("goldInr");
+const silverUsdEl=document.getElementById("silverUsd");
+const copperInrEl=document.getElementById("copperInr");
+const alertStatus=document.getElementById("alertStatus");
+
 loadRates();
-setInterval(loadRates, 60000);
+setInterval(loadRates,60000);
 </script>
 
 </body>
