--- a/index.html
+++ b/index.html
@@ -1,174 +1,115 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Global Commodity Dashboard</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Global Commodities Dashboard</title>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
-body {
-  background:#020617;
-  color:#e5e7eb;
-  font-family:system-ui;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  min-height:100vh;
-}
-
-.card {
-  background:#0f172a;
-  border:1px solid #1f2937;
-  padding:20px;
-  border-radius:16px;
-  width:420px;
-  box-shadow:0 10px 30px rgba(0,0,0,0.4);
-}
-
-h2 { text-align:center; }
-
-.item {
-  display:flex;
-  justify-content:space-between;
-  margin:8px 0;
-}
-
-.green{color:#22c55e;font-weight:bold}
-.yellow{color:#facc15;font-weight:bold}
-.blue{color:#38bdf8;font-weight:bold}
-.gray{color:#94a3b8}
-
-input,button{
-  background:#020617;
-  border:1px solid #1f2937;
-  color:#fff;
-  padding:6px;
-  border-radius:8px;
-}
-button{cursor:pointer}
-
+body{background:#020617;color:#e5e7eb;font-family:system-ui;display:flex;justify-content:center;padding:20px}
+.card{background:#0f172a;border:1px solid #1f2937;padding:20px;border-radius:16px;width:480px}
+.row{display:flex;justify-content:space-between;padding:6px 0;cursor:pointer}
+.row:hover{background:#020617}
+input,button{background:#020617;border:1px solid #1f2937;color:#fff;padding:6px;border-radius:8px}
+small{color:#94a3b8}
 canvas{margin-top:10px}
-
 </style>
 </head>
 <body>
 
 <div class="card">
-  <h2>🌍 Global Rates Dashboard</h2>
+<h2>🌍 Global Market Dashboard</h2>
 
-  <div class="item"><span>💵 USD → INR</span><span id="usdInr" class="green">Loading...</span></div>
-  <div class="item"><span>🟨 Gold (oz)</span><span id="goldUsd" class="yellow">Loading...</span></div>
-  <div class="item"><span>🇮🇳 Gold ₹/gram</span><span id="goldInr" class="blue">Loading...</span></div>
-  <div class="item"><span>🪙 Silver (oz)</span><span id="silverUsd" class="gray">Loading...</span></div>
-  <div class="item"><span>🟫 Copper (kg ₹)</span><span id="copperInr" class="gray">Loading...</span></div>
+<div class="row" onclick="loadChart('USDINR=X')">💵 USD → INR <span id="usdInr">...</span></div>
+<div class="row" onclick="loadChart('XAUUSD=X')">🟨 Gold (₹/g) <span id="gold">...</span></div>
+<div class="row" onclick="loadChart('XAGUSD=X')">🪙 Silver (₹/kg) <span id="silver">...</span></div>
+<div class="row" onclick="loadChart('HG=F')">🟫 Copper (₹/kg) <span id="copper">...</span></div>
+<div class="row" onclick="loadChart('CL=F')">🛢 Crude Oil (₹/L) <span id="crude">...</span></div>
 
-  <hr style="border-color:#1f2937;margin:10px 0">
+<hr style="border-color:#1f2937">
 
-  <div class="item">
-    <input id="alertPrice" placeholder="Gold alert ₹/gram" type="number">
-    <button onclick="setAlert()">🔔 Set Alert</button>
-  </div>
-  <div id="alertStatus" class="gray" style="font-size:12px"></div>
+<input id="alertPrice" placeholder="Gold alert ₹/gram">
+<button onclick="setAlert()">🔔 Set Gold Alert</button>
+<div id="alertStatus"><small>No alert set</small></div>
 
-  <canvas id="goldChart"></canvas>
-  <canvas id="fxChart"></canvas>
+<canvas id="chart" height="140"></canvas>
 
-  <div class="gray" style="text-align:center;font-size:12px;margin-top:10px">
-    Auto refresh every 60 seconds
-  </div>
+<p><small>Click any asset to view chart • Auto refresh every 60s</small></p>
 </div>
 
 <script>
-let goldHistory=[], fxHistory=[];
-let alertTarget=null;
+const symbols={
+ usd:"USDINR=X",
+ gold:"XAUUSD=X",
+ silver:"XAGUSD=X",
+ copper:"HG=F",
+ crude:"CL=F"
+};
 
-async function loadRates(){
-  try{
-    // USD INR
-    const fx = await fetch("https://open.er-api.com/v6/latest/USD");
-    const fxData = await fx.json();
-    const usdInr = fxData.rates.INR;
+let prices={},alertTarget=null;
 
-    // Gold
-    const gold = await fetch("https://api.gold-api.com/price/XAU");
-    const goldData = await gold.json();
-    const goldUsd = goldData.price;
+async function fetchPrice(sym){
+ const url=`https://query1.finance.yahoo.com/v8/finance/chart/${sym}?interval=1m&range=1d`;
+ const j=await (await fetch(url)).json();
+ return j.chart.result[0].meta.regularMarketPrice;
+}
 
-    // Silver
-    const silver = await fetch("https://api.gold-api.com/price/XAG");
-    const silverData = await silver.json();
-    const silverUsd = silverData.price;
+async function refresh(){
+ try{
+  let usd=await fetchPrice(symbols.usd);
+  let gold=await fetchPrice(symbols.gold);
+  let silver=await fetchPrice(symbols.silver);
+  let copper=await fetchPrice(symbols.copper);
+  let crude=await fetchPrice(symbols.crude);
 
-    // Copper (USD per pound → convert to INR/kg)
-    const copper = await fetch("https://api.metals.live/v1/spot/copper");
-    const copperData = await copper.json();
-    const copperUsdLb = copperData[0].price;
-    const copperInrKg = copperUsdLb * usdInr * 2.20462;
+  let goldInr=(gold*usd)/31.1035;
+  let silverInr=(silver*usd)*32.1507;
+  let copperInr=(copper*usd)*2.20462;
+  let crudeInr=(crude*usd)/159;
 
-    const goldInrGram = (goldUsd * usdInr) / 31.1035;
+  usdInr.textContent=`₹${usd.toFixed(2)}`;
+  gold.textContent=`₹${goldInr.toFixed(2)}`;
+  silver.textContent=`₹${silverInr.toFixed(0)}`;
+  copper.textContent=`₹${copperInr.toFixed(0)}`;
+  crude.textContent=`₹${crudeInr.toFixed(2)}`;
 
-    usdInrEl.textContent = `₹ ${usdInr.toFixed(2)}`;
-    goldUsdEl.textContent = `$ ${goldUsd.toFixed(2)}`;
-    goldInrEl.textContent = `₹ ${goldInrGram.toFixed(2)}`;
-    silverUsdEl.textContent = `$ ${silverUsd.toFixed(2)}`;
-    copperInrEl.textContent = `₹ ${copperInrKg.toFixed(2)}`;
-
-    goldHistory.push(goldInrGram);
-    fxHistory.push(usdInr);
-
-    if(goldHistory.length>20){goldHistory.shift();fxHistory.shift();}
-
-    updateCharts();
-
-    if(alertTarget && goldInrGram>=alertTarget){
-      alert("🔔 Gold Alert hit: ₹"+goldInrGram.toFixed(2));
-      alertTarget=null;
-      alertStatus.textContent="Alert triggered.";
-    }
-
-  }catch{
-    document.body.innerHTML="<h2 style='color:red'>API Error. Try again later.</h2>";
+  if(alertTarget && goldInr>=alertTarget){
+    alert("🔔 Gold Alert Hit ₹"+goldInr.toFixed(2));
+    alertTarget=null;
   }
+
+ }catch(e){
+  document.body.innerHTML="<h2 style='color:red'>API blocked temporarily. Refresh page.</h2>";
+ }
 }
 
 function setAlert(){
-  alertTarget=parseFloat(alertPrice.value);
-  alertStatus.textContent="Alert set at ₹"+alertTarget;
+ alertTarget=parseFloat(alertPrice.value);
+ alertStatus.innerHTML="<small>Alert set at ₹"+alertTarget+"</small>";
 }
 
-let goldChart=new Chart(document.getElementById("goldChart"),{
-  type:"line",
-  data:{labels:[],datasets:[{label:"Gold ₹/g",data:[],borderWidth:2}]},
-  options:{responsive:true}
+let chart=new Chart(chartCtx,{
+ type:"line",
+ data:{labels:[],datasets:[{data:[],borderWidth:2}]},
+ options:{responsive:true,plugins:{legend:{display:false}}}
 });
 
-let fxChart=new Chart(document.getElementById("fxChart"),{
-  type:"line",
-  data:{labels:[],datasets:[{label:"USD/INR",data:[],borderWidth:2}]},
-  options:{responsive:true}
-});
-
-function updateCharts(){
-  goldChart.data.labels=goldHistory.map((_,i)=>i+1);
-  goldChart.data.datasets[0].data=goldHistory;
-  goldChart.update();
-
-  fxChart.data.labels=fxHistory.map((_,i)=>i+1);
-  fxChart.data.datasets[0].data=fxHistory;
-  fxChart.update();
+async function loadChart(sym){
+ const url=`https://query1.finance.yahoo.com/v8/finance/chart/${sym}?interval=5m&range=1d`;
+ const j=await (await fetch(url)).json();
+ let t=j.chart.result[0].timestamp;
+ let p=j.chart.result[0].indicators.quote[0].close;
+ chart.data.labels=t.map(x=>new Date(x*1000).toLocaleTimeString());
+ chart.data.datasets[0].data=p;
+ chart.update();
 }
 
-const usdInrEl=document.getElementById("usdInr");
-const goldUsdEl=document.getElementById("goldUsd");
-const goldInrEl=document.getElementById("goldInr");
-const silverUsdEl=document.getElementById("silverUsd");
-const copperInrEl=document.getElementById("copperInr");
-const alertStatus=document.getElementById("alertStatus");
+const chartCtx=document.getElementById("chart");
 
-loadRates();
-setInterval(loadRates,60000);
+refresh();
+setInterval(refresh,60000);
 </script>
 
 </body>
